<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">顺间美发师端</string>
    <string name="hello_world">Hello world!</string>
    <!-- 侧边栏名字 -->
    <string name="home_slidingmenu_item_activity">奖励活动</string>
    <string name="home_slidingmenu_item_income">收入明细</string>
    <string name="home_slidingmenu_item_qqgroup">加入官方QQ群</string>
    <string name="home_slidingmenu_item_activities">奖励活动</string>
    <string name="home_slidingmenu_item_ruledesc">规则说明</string>
    <string name="home_slidingmenu_item_withdraw">提现记录</string>
    <string name="home_slidingmenu_item_setting">设置</string>

    <!-- tab名字 -->
    <string name="home_tab_manager">管理</string>
    <string name="home_tab_schedule">日程</string>
    <string name="home_tab_order">订单</string>
    <string name="home_tab_me">我的</string>

    <!-- 网络问题 -->
    <string name="no_networks_found">没有网络连接，请检查网络</string>
    <string name="request_failure">服务器请求失败,请稍后在试!</string>

    <!-- 物料提取 -->
    <string name="materialget_textview_chooseaddress">选择提取点：</string>
    <string name="materialget_textview_choosetime">选择提取时间：</string>
    <string name="materialget_textview_choosethings">选择可提取物品：</string>
    <string name="materialget_button_add">添加</string>
    <string name="materialget_button_ok">确定</string>
    <string name="materialmanager_radiobutton_get">物料提取</string>
    <string name="materialmanager_radiobutton_doing">提取中</string>
    <string name="materialmanager_radiobutton_history">提取记录</string>
    <!-- 物料提取 -->
    <string name="schedule_fragment_textview1">时间管理</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_schedule">MyScheduleActivity</string>
    <string name="title_activity_schedule_compile">ScheduleCompileActivity</string>

</resources>