<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_grey_bg"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="50dp"
        layout="@layout/uicomp_title_bar_red_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/materialmanager_radiobutton_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/materialmanager_left_bg"
            android:gravity="center"
            android:text="@string/materialmanager_radiobutton_get"
            android:textSize="@dimen/textsize_16" />

        <Button
            android:id="@+id/materialmanager_radiobutton_doing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/materialmanager_middle_bg"
            android:gravity="center"
            android:text="@string/materialmanager_radiobutton_doing"
            android:textSize="@dimen/textsize_16" />

        <Button
            android:id="@+id/materialmanager_radiobutton_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/materialmanager_right_bg"
            android:gravity="center"
            android:text="@string/materialmanager_radiobutton_history"
            android:textSize="@dimen/textsize_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <FrameLayout
            android:id="@+id/materialactivity_content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </FrameLayout>
    </LinearLayout>

</LinearLayout>