<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_home_schedule"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_home_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/list_select" />

            <TextView
                android:id="@+id/tv_home_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/home_tab_schedule" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_home_manager"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_home_manager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/edit_normal" />

            <TextView
                android:id="@+id/tv_home_manager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/home_tab_manager" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_home_order"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_home_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/order_normal" />

            <TextView
                android:id="@+id/tv_home_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/home_tab_order" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/ll_home_me"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_home_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/user_normal" />

            <TextView
                android:id="@+id/tv_home_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_home_me"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/home_tab_me" />

            <TextView
                android:id="@+id/tv_red_point"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="-5dp"
                android:layout_marginTop="-5dp"
                android:layout_toRightOf="@+id/iv_home_me"
                android:background="@drawable/point_red"
                android:gravity="center"
                android:text="2"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_12"
                android:visibility="visible" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>